--- a/system/modules/currentInstallation/html/ci.css
+++ b/system/modules/currentInstallation/html/ci.css
@@ -1,15 +1,1 @@
-  #current-installation { 
-    padding:12px 20px 14px;
-    margin:5px 5px 10px;
-    color:white;
-    overflow:hidden;
-    width:auto;
-    background:none repeat scroll 0 0 #FFFFFF;
-    border:1px solid #BBBBBB;
-    border-radius:3px 3px 3px 3px;
-    box-shadow:0 3px 6px #CCCCCC;
-  }
-
-  #current-installation p { 
-    margin:0;
-  }
+#current-installation{padding:12px 20px 14px;margin:5px 5px 10px;color:white;overflow:hidden;width:auto;background:none repeat scroll 0 0 #fff;border:1px solid #bbb;border-radius:3px 3px 3px 3px;box-shadow:0 3px 6px #ccc}#current-installation p{margin:0;text-align:center}#current-installation p a{text-decoration:underline}
